--- a/CRUD_App/views/layouts/header.ejs
+++ b/CRUD_App/views/layouts/header.ejs
@@ -6,6 +6,7 @@
 		<div>
 			<a href="/">Home</a> | 
 			<a href="/users/add">Add New User</a> | 
-			<a href="/users">All Users List</a>
+			<a href="/users">All Users List</a>	  |
+			<a href="/admin/questions">Insert Questions</a>
 		</div>	
 		<h1><%= title %></h1>
