--- a/CRUD_App/views/layouts/header.ejs
+++ b/CRUD_App/views/layouts/header.ejs
@@ -4,9 +4,10 @@
 	</head>
 	<body>
 		<div>
-			<a href="/">Home</a> | 
-			<a href="/users/add">Add New User</a> | 
+			<a href="/">Home</a> |
+			<a href="/users/add">Add New User</a> |
 			<a href="/users">All Users List</a>	  |
 			<a href="/admin/questions">Insert Questions</a>
-		</div>	
+			<a href="/admin/">Question List</a>
+		</div>
 		<h1><%= title %></h1>
