--- a/CRUD_App/views/main/questionList.ejs
+++ b/CRUD_App/views/main/questionList.ejs
@@ -52,7 +52,7 @@ including header content which is common for all pages
 			<td>
 				<div style="float:left">
 					<a href='/admin/edit/<%= question.id %>'>Edit</a> &nbsp;
-					<form method="post" action="/users/delete/<%= question.id %>" style="float:right">
+					<form method="post" action="/admin/delete/<%= question.id %>" style="float:right">
 						<input type="submit" name="delete" value='Delete' onClick="return confirm('Are you sure you want to delete?')" />
 						<input type="hidden" name="_method" value="DELETE" />
 					</form>
