new login setup

--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -1,5 +1,6 @@
 
-		<html>
+    <!--login in nav-->
+    <html>
 			<head>
 			
 					<title><%= title %></title>
@@ -13,7 +14,7 @@
 			
 			
 			
-			<link rel="stylesheet" type="text/css" href="/CB_V1/theme/app.css">
+			<link rel="stylesheet" type="text/css" href="/app.css">
 			
 			
 				
@@ -37,18 +38,9 @@
 								  <div class="collapse navbar-collapse" id="centerednav">
 									<ul class="nav navbar-nav">
 									  <li class="active"><a href="/">Home</a></li>
-									  <li><a href="/users/add">Add new user</a></li>
-									  <li><a href="/users">All user list</a></li>
-									  <li class="dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin controls  <b class="caret"></b></a>
-										<ul class="dropdown-menu">
-										  <li><a href="/admin/questions">Add questions</a></li>
-										  <li><a href="/admin/">Question List</a></li>
-										  <li><a href="#">Something else here</a></li>
-										  <li class="divider"></li>
-										  <li class="dropdown-header">Nav header</li>
-										  <li><a href="#">Separated link</a></li>
-										  <li><a href="#">One more separated link</a></li>
+									  <li><a href="/">About Us</a></li>
+									  <li><a href="/users">Contact</a></li>
+									
 										</ul>
 									  </li>          
 									</ul>
