--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
     <main>
      <center>
      
-         <div  class="z-depth-3 y-depth-3 x-depth-3 grey green-text lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px; margin-top: 100px; solid #EEE;">
+         <div  class="z-depth-3 y-depth-3 x-depth-3 grey green-text lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px; margin-top: 100px;">
          <div class="section"></div>
  <div class="section"></div>
        
@@ -39,7 +39,7 @@
                  <input class='validate' type='password' name='password' id='password' required />
                  <label for='password'>Password</label>
                </div>
-               <label style='float: right;'>
+               <label style= float:right;>
                <b style="color: #F5F5F5;">Forgot Password?</b>
                </label>
              </div>
