--- a/main.css
+++ b/main.css
@@ -1,11 +1,24 @@
-body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-  }
-  main {
-  flex: 1 0 auto;
-  }
-body {
-  background: #fff;
+.title{
+  color:#007bff;
+}
+
+.mgTp{
+  margin-top:10%;
+}
+
+.topBtn{
+  margin-top:15px;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #007bff !important;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #007bff !important;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: #007bff !important;
 }
