--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -1,87 +1,57 @@
 
-    <!--login in nav-->
-    <html>
-			<head>
-			
-					<title><%= title %></title>
-			  
-					<meta name="viewport" content="width=device-width, initial-scale=1">
-			
-			<!-- Latest compiled and minified CSS -->
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-			<!-- Optional theme -->
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-			
-			
-			
-			<link rel="stylesheet" type="text/css" href="/app.css">
-			
-			
+<head>		
+				<title><%= title %></title>
+				  
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
-			</head>
-				<body>
-					<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+				
+				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+				
+        <link rel="stylesheet" type="text/css" href="/app.css"
+
+      </head>	
+     
+     
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+		<a class="navbar-brand" href="#">418Y Group #8</a>
+	
+<div>
+		  <ul class="navbar-nav">
+      <li class="nav-item">
+			  <a class="nav-link" href="/">Home</a>
+			</li>
+      <li class="nav-item">
+			  <a class="nav-link " href="/">About us</a>
+			</li>
+			<li class="nav-item">
+					<a class="nav-link" href="/">Contact Us</a>
+				  </li>
 			
-					<div class="container" >
-			
-			
-									
-								  <div class="navbar-header">
-									<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-									  <span class="sr-only">Toggle navigation</span>
-									  <span class="icon-bar"></span>
-									  <span class="icon-bar"></span>
-									  <span class="icon-bar"></span>
-									</button>
-									<a class="navbar-brand" href="#">418Y Group #8</a>
-								  </div>
-								  <div class="collapse navbar-collapse" id="centerednav">
-									<ul class="nav navbar-nav">
-									  <li class="active"><a href="/">Home</a></li>
-									  <li><a href="/">About Us</a></li>
-									  <li><a href="/users">Contact</a></li>
-									
-										</ul>
-									  </li>          
-									</ul>
-								  </div><!--/.nav-collapse -->
-								  
-								</div>
-								
-							</div>
-							  
-							
-							<div class="container">
-						  
-									<div class="starter-template text-center">
-										
-										<p class="lead"> </p>
-									</div>
-								
-									</div><!-- /.container -->
-								
-							
-								
-								  <script src="http://getbootstrap.com/dist/js/bootstrap.js"></script>
+		  </ul>
+    </div> 
+		
+	  </nav>
+
+
+
 			
 			
-									<!-- jquery file-->
-								
-								
-									<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-								  
-										  <!-- Latest compiled and minified JavaScript -->
-								  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-								
-			
-			<script src="app.js"></script>
-							
-							
-								</body>
-			
-			
-						 
-					
-					
-						
-					
+	  <!-- jquery file-->
+  
+  
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+
+	   <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	
+	
+  
+
+<script src="app.js"></script>
+
+
+  
