--- a/views/main/list.ejs
+++ b/views/main/list.ejs
@@ -1,3 +1,5 @@
+
+
 <!--
 including header content which is common for all pages
 -->
@@ -11,16 +13,19 @@ including header content which is common for all pages
 	<p style="color:green"><%- messages.success %></p>
 <% } %>
 
-<table width='80%' border=0>
 
-	<tr style='text-align:left; background-color:#CCC'>
-		<th>Username</th>
-		<th>Password</th>
-		<th>Administrator</th>
-		<th>Action</th>
-	</tr>
 
-	<!--
+
+<table class="table">
+        <thead class="thead-dark">
+          <tr>
+				<th scope="col">Username</th>
+				<th scope="col">Password</th>
+				<th scope="col">Administrator</th>
+				<th scope="col">Action</th>
+          </tr>
+        </thead>
+        	<!--
 		Using FOREACH LOOP for the users array
 
 		myArray.forEach(function(el, index) {
@@ -28,12 +33,20 @@ including header content which is common for all pages
 		});
 	-->
 	<% if (data) { %>
-	<% data.forEach(function(user){ %>
-		<tr>
-			<td><%= user.username %></td>
+        <% data.forEach(function(user){ %>
+        
+        
+        
+        
+        
+          <tr>
+           
+            <td><%= user.username %></td>
 			<td><%= user.password %></td>
 			<td><%= user.administrator %></td>
-			<td>
+         
+       
+          <td>
 				<div style="float:left">
 					<a href='/users/edit/<%= user.id %>'>Edit</a> &nbsp;
 					<form method="post" action="/users/delete/<%= user.id %>" style="float:right">
@@ -42,13 +55,23 @@ including header content which is common for all pages
 					</form>
 				</div>
 			</td>
-		</tr>
-	<% }) %>
-	<% } %>
 
-</table>
+        </tr>
+        <% }) %>
+        <% } %>
+      
+
+
 
 <!--
 including footer content which is common for all pages
 -->
 <%- include ../layouts/footer.ejs %>
+
+
+
+
+
+
+
+
