--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,26 +1,26 @@
 
-		<html>
+		
 				<head>
-				
 						<title><%= title %></title>
 				  
+				
 						<meta name="viewport" content="width=device-width, initial-scale=1">
 				
 				
-				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-				
+						<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+						
+						<link rel="stylesheet" type="text/css" href="/app.css"
+		
+				</head>
 
 
-				<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></nav>
-		<a class="navbar-brand" href="#">418Y Group #8</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
-		</button>
-	  
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		  <ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
+				<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+						<a class="navbar-brand" href="#">418Y Group #8</a>
+	
+				<div>
+
+		  <ul class="navbar-nav">
+			<li class="nav-item">
 			  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
@@ -43,14 +43,11 @@
 			</li>
 			
 		  </ul>
-		  
 		</div>
+
 	  </nav>
 
 
-	  <script src="http://getbootstrap.com/dist/js/bootstrap.js"></script>
-			
-			
 	  <!-- jquery file-->
   
   
@@ -69,4 +66,4 @@
 <script src="app.js"></script>
 
 
-  </body>
+ 
