--- a/temp.ejs
+++ b/temp.ejs
@@ -1,35 +1,80 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<!--
+including header content which is common for all pages
+-->
+<%- include ../layouts/header.ejs %>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+<% if (messages.error) { %>
+	<p style="color:red"><%- messages.error %></p>
+<% } %>
+
+<% if (messages.success) { %>
+	<p style="color:green"><%- messages.success %></p>
+<% } %>
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"> 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="container">
+		<div class="row justify-content-center">
+		  <div class="col-4">
+<form  action="/users/add" method="post" name="form1">
+	
+  <div class="form-group">
+    <label for="">Question Type</label> 
+    <input style="width: 250px" class="form-control" id="username" name="username" type="text" class="form-control" value="<%= username %>">
   </div>
-</nav>
+  <div class="form-group">
+    <label >Question Text</label> 
+    <input style="width: 250px" class="form-control"  type="text" name="questionText" value="<%= questionText %>"/>
+  </div>
+  <div class="form-group">
+      <label >Answer 1: (a-d/bool)</label> 
+      <input style="width: 250px" class="form-control"  type="text" name="answer1" value="<%= answer1 %>" />
+    </div>
+    <div class="form-group">
+        <label>Answer 1: Text</label> 
+        <input style="width: 250px" class="form-control"  type="text" name="answer1Text" value="<%= answer1Text %>"/>
+      </div>
+      <div class="form-group">
+          <label >Answer 2: (a-d/bool)</label> 
+          <input style="width: 250px" class="form-control"  type="text" name="answer2" value="<%= answer2 %>"/>
+        </div>
+        <div class="form-group">
+            <label>Answer 2: text</label> 
+            <input style="width: 250px" class="form-control"  type="text" name="answer2Text" value="<%= answer2Text %>"/>
+          </div>
+          <div class="form-group">
+              <label>Answer: 3 (a-d/bool)</label> 
+              <input style="width: 250px" class="form-control" type="text" name="answer3" value="<%= answer3 %>" />
+            </div>
+            <div class="form-group">
+                <label for="password">Answer 3: Text</label> 
+                <input style="width: 250px" class="form-control"  type="text" name="answer3Text" value="<%= answer3Text %>" />
+              </div>
+              <div class="form-group">
+                  <label for="password">Answer 4: (a-d/bool)</label> 
+                  <input style="width: 250px" class="form-control"  type="text" name="answer4" value="<%= answer4 %>"/>
+                </div>
+                <div class="form-group">
+                    <label for="password">Answer 4: Text</label> 
+                    <input style="width: 250px" class="form-control" type="text" name="answer4Text" value="<%= answer4Text %>"/>
+                  </div>
+                  <div class="form-group">
+                      <label for="password">Correct answer (a-d/bool)</label> 
+                      <input style="width: 250px" class="form-control" type="text" name="correctAnswer" value="<%= correctAnswer %>"/>
+                    </div>
+
+  <div class="form-group">
+    <button name="submit" type="submit" class="btn btn-primary" value="Add">Add</button>
+  </div>
+
+</form>
+</div>
+</div>
+</div>
+
+<!--
+including footer content which is common for all pages
+-->
+<%- include ../layouts/footer.ejs %>
