--- a/views/main/add.ejs
+++ b/views/main/add.ejs
@@ -11,26 +11,36 @@ including header content which is common for all pages
 	<p style="color:green"><%- messages.success %></p>
 <% } %>
 
-<form action="/users/add" method="post" name="form1">
-	<table width="25%" border="0">
-		<tr>
-			<td>Username</td>
-			<td><input type="text" name="username" id="username" value="<%= username %>" /></td>
-		</tr>
-		<tr>
-			<td>Password</td>
-			<td><input type="text" name="password" value="<%= password %>" /></td>
-		</tr>
-		<tr>
-			<td>Administrator</td>
-			<td><input type="text" name="administrator" value="<%= administrator %>" /></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td><input type="submit" name="Submit" value="Add" /></td>
-		</tr>
-	</table>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"> 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="container">
+		<div class="row justify-content-center">
+		  <div class="col-4">
+<form  action="/users/add" method="post" name="form1">
+	
+  <div class="form-group">
+    <label for="">Username</label> 
+    <input style="width: 250px" id="username" name="username" type="text" class="form-control" value="<%= username %>">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label> 
+    <input style="width: 250px" id="password" name="password" type="text" required="required" class="form-control" value="<%= administrator %>"  >
+  </div>
+  <div class="form-group">
+    <label for="admin">Administrator</label> 
+    <input style="width: 250px" id="admin" name="administrator" type="text" class="form-control" aria-describedby="adminHelpBlock" required="required" value="<%= administrator %>" > 
+    <span id="adminHelpBlock" class="form-text text-muted">Type y/n</span>
+  </div> 
+  <div class="form-group">
+    <button name="submit" type="submit" class="btn btn-primary" value="Add">Add</button>
+  </div>
+
 </form>
+</div>
+</div>
+</div>
 
 <!--
 including footer content which is common for all pages
