--- a/views/main/questions.ejs
+++ b/views/main/questions.ejs
@@ -11,58 +11,68 @@ including header content which is common for all pages
 	<p style="color:green"><%- messages.success %></p>
 <% } %>
 
-<form action="/admin/questions" method="post" name="form1">
-	<table width="25%" border="0">
-		<tr>
-			<td>Question Type</td>
-			<td><input type="text" name="questionType" id="questionType" value="<%= questionType %>" /></td>
-		</tr>
-		<tr>
-			<td>Question Text</td>
-			<td><input type="text" name="questionText" value="<%= questionText %>" /></td>
-        </tr>
-        <tr>
-			<td>answer 1 alphabet/bool</td>
-			<td><input type="text" name="answer1" value="<%= answer1 %>" /></td>
-        </tr>
-        <tr>
-			<td>answer 1 text</td>
-			<td><input type="text" name="answer1Text" value="<%= answer1Text %>" /></td>
-        </tr>
-        <tr>
-			<td>answer 2 alphabet/bool</td>
-			<td><input type="text" name="answer2" value="<%= answer2 %>" /></td>
-        </tr>
-        <tr>
-			<td>answer 2 text</td>
-			<td><input type="text" name="answer2Text" value="<%= answer2Text %>" /></td>
-        </tr>
-        <tr>
-			<td>answer 3 alphabet/bool</td>
-			<td><input type="text" name="answer3" value="<%= answer3 %>" /></td>
-        </tr>
-        <tr>
-			<td>answer 3 text</td>
-			<td><input type="text" name="answer3Text" value="<%= answer3Text %>" /></td>
-        </tr>
-        <tr>
-			<td>answer 4 alphabet/bool</td>
-			<td><input type="text" name="answer4" value="<%= answer4 %>" /></td>
-        </tr>
-        <tr>
-			<td>answer 4 text</td>
-			<td><input type="text" name="answer4Text" value="<%= answer4Text %>" /></td>
-        </tr>
-        <tr>
-			<td>correct answer alphabet/bool</td>
-			<td><input type="text" name="correctAnswer" value="<%= correctAnswer %>" /></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td><input type="submit" name="Submit" value="Add" /></td>
-		</tr>
-	</table>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"> 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="container">
+		<div class="row justify-content-center">
+		  <div class="col-4">
+<form  action="/users/question" method="post" name="form1">
+	
+  <div class="form-group">
+    <label>Question Type</label> 
+    <input style="width: 250px" class="form-control" id="questiontype" name="questiontype" type="questionType" value="<%= questionType %>">
+  </div>
+  <div class="form-group">
+    <label >Question Text</label> 
+    <input style="width: 250px" class="form-control"  type="text" name="questionText" value="<%= questionText %>"/>
+  </div>
+  <div class="form-group">
+      <label >Answer 1: (a-d/bool)</label> 
+      <input style="width: 250px" class="form-control"  type="text" name="answer1" value="<%= answer1 %>" />
+    </div>
+    <div class="form-group">
+        <label>Answer 1: Text</label> 
+        <input style="width: 250px" class="form-control"  type="text" name="answer1Text" value="<%= answer1Text %>"/>
+      </div>
+      <div class="form-group">
+          <label >Answer 2: (a-d/bool)</label> 
+          <input style="width: 250px" class="form-control"  type="text" name="answer2" value="<%= answer2 %>"/>
+        </div>
+        <div class="form-group">
+            <label>Answer 2: text</label> 
+            <input style="width: 250px" class="form-control"  type="text" name="answer2Text" value="<%= answer2Text %>"/>
+          </div>
+          <div class="form-group">
+              <label>Answer: 3 (a-d/bool)</label> 
+              <input style="width: 250px" class="form-control" type="text" name="answer3" value="<%= answer3 %>" />
+            </div>
+            <div class="form-group">
+                <label >Answer 3: Text</label> 
+                <input style="width: 250px" class="form-control"  type="text" name="answer3Text" value="<%= answer3Text %>" />
+              </div>
+              <div class="form-group">
+                  <label >Answer 4: (a-d/bool)</label> 
+                  <input style="width: 250px" class="form-control"  type="text" name="answer4" value="<%= answer4 %>"/>
+                </div>
+                <div class="form-group">
+                    <label >Answer 4: Text</label> 
+                    <input style="width: 250px" class="form-control" type="text" name="answer4Text" value="<%= answer4Text %>"/>
+                  </div>
+                  <div class="form-group">
+                      <label>Correct answer (a-d/bool)</label> 
+                      <input style="width: 250px" class="form-control" type="text" name="correctAnswer" value="<%= correctAnswer %>"/>
+                    </div>
+
+  <div class="form-group">
+    <button name="submit" type="submit" class="btn btn-primary" value="Add">Add</button>
+  </div>
+
 </form>
+</div>
+</div>
+</div>
 
 <!--
 including footer content which is common for all pages
