student homepage linked

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
 
    <div class="container">
        <div class="row mgTp">
-           <form class="col-md-6 offset-md-3" action="/users/add" method="post" name="form1" >
+           <form class="col-md-6 offset-md-3" action="/login/home" method="post" name="form1" >
                <h3 class="title">Login</h3>
                <hr class="divisor">
                <div class="form-group">
