Separated user and admin

--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -24,10 +24,13 @@
 			  <a class="nav-link" href="/">About us</a>
 			</li>
 			<li class="nav-item">
+				<a class="nav-link" href="/userlogin/add_userlogin">Add New User</a>
+				</li>
+			<li class="nav-item">
 					<a class="nav-link" href="/">Contact Us</a>
 					</li>
 			<li class="nav-item">
-					<a class="nav-link" href="/adminlogin/add_adminlogin">Admin Sign Up</a>
+					<a class="nav-link" href="/adminlogin/add_adminlogin">Admin Home</a>
 					</li>
 			
 		  </ul>
