--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -27,14 +27,12 @@
 			  <a class="nav-link" href="/adminlogin/add_adminlogin">Add new admin</a>
 			</li>
 			<li class="nav-item">
-					<a class="nav-link" href="/adminlogin">All Admin list</a>
-				  </li>
-					<li class="nav-item">
-						<a class="nav-link" href="/userlogin/add_userlogin">Add new user</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/userlogin">All user list</a>
-							</li>	
+					<a class="nav-link" href="/adminlogin">Admins list</a>
+				</li>
+			<li class="nav-item">
+						<a class="nav-link" href="/userlogin">Users list</a>
+					</li>			
+					
 			<li class="nav-item dropdown">
 			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				Admin controls
