centered forms/new question list table

--- a/views/app.css
+++ b/views/app.css
@@ -30,11 +30,18 @@
     }
 }
 
-.wrapper {
-    text-align: center;
-}
 
-.button {
-    position: absolute;
-    top: 50%;
-}
+
+#button {
+	appearance: none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	height: 30px;
+	width: 200px;
+	left: 50%;
+	top: 50%;
+	margin-top: -15px;   /* = -height / 2   */
+	margin-left: -100px; /* = -width / 2    */
+	position: fixed;     /* Fixed is better */
+  }
+
