--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -4,34 +4,40 @@ including header content which is common for all pages
 <%- include ../layouts/head.ejs %>
 
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha364-Gn5364xqQ1aoWXA+056RXPxPg6fy4IWvTNh0E663XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 						
-        <link rel="stylesheet" href="/CB_V1/CRUD_App/views/app.css">
+      
 
 
-
-<form  action="/login/home" method="post" name="form1">
-<div class="wrapper">
-<div class="d-block mx-auto text-center">
-  <div class="btn-group btn-group-lg" role="group" aria-label="...">
-          <button type="button" class="btn btn-info">Generate Quiz 1</button>
-          <button type="button" class="btn btn-info">Generate Quiz 2</button> 
-          <button type="button" class="btn btn-info">Generate Quiz 3</button> 
-        </div>
-      </div>
+        <div class="container h-100">
+            <div class="d-flex align-items-center flex-column justify-content-center h-100" id="header">    
+<form  class="col-md-8 offset-md-5" action="/login/home" id="form" method="post" class="form-inline" >
+<div class="button-wrapper">
+    <p>Memory:SDRAM/DRAM</p>
+  <button class="btn btn-rounded btn-primary btn-lg">Generate Quiz 1</button>
     </div>
-
-    </form>
+    <div class="button-wrapper">
+        <p>Avengers Triva</p>
+      <button class="btn btn-rounded btn-primary btn-lg">Generate Quiz 2</button>
+        </div>
+        <div class="button-wrapper">
+            <span><p>GoT Trivia</p>
+          <button class="btn btn-rounded btn-primary btn-lg">Generate Quiz 3</button>
+            </div>
+      
+    </form> 
+  </div>
+</div>
       <!-- jquery file-->
   
   
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.16.4/jquery.min.js"></script>
 
 
       <!-- Optional JavaScript -->
    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+   <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha364-KJ3o6DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.9/umd/popper.min.js" integrity="sha364-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha364-JZR6Spejh4U06d6jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
    
   
