--- a/views/main/questionList.ejs
+++ b/views/main/questionList.ejs
@@ -11,23 +11,24 @@ including header content which is common for all pages
 	<p style="color:green"><%- messages.success %></p>
 <% } %>
 
-<table width='80%' border=0>
+<table class="table">
+	<thead class="thead-dark">
 
-	<tr style='text-align:left; background-color:#CCC'>
-		<th>Question Type</th>
-		<th>Question Text</th>
-		<th>Answer 1</th>
-		<th>Answer 1 Text</th>
-    <th>Answer 2</th>
-		<th>Answer 2 Text</th>
-    <th>Answer 3</th>
-		<th>Answer 3 Text</th>
-    <th>Answer 4</th>
-		<th>Answer 4 Text</th>
-    <th>Correct Answer</th>
-		<th>Action</th>
+	<tr>
+		<th scope="col">Question Type</th>
+		<th scope="col">Question Text</th>
+		<th scope="col">Answer 1</th>
+		<th scope="col">Answer 1 Text</th>
+    <th scope="col">Answer 2</th>
+		<th scope="col">Answer 2 Text</th>
+    <th scope="col">Answer 3</th>
+		<th scope="col">Answer 3 Text</th>
+    <th scope="col">Answer 4</th>
+		<th scope="col">Answer 4 Text</th>
+    <th scope="col">Correct Answer</th>
+		<th scope="col">Action</th>
 	</tr>
-
+</thead>
 	<!--
 		Using FOREACH LOOP for the users array
 
