--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,7 +11,10 @@
 <div class="container text-center">
     <% include partials/template/navigationadmin.ejs %>
     <div class="row">
-        <h1>Welcome!</h1>
+        <div class="row">
+            <img class="img-responsive center-block" src="images/admincbedit.png" class="img-responsive" alt="Chalkboard" style="width:800px;height:500px;" >
+            
+            <div>
     </div><!-- span12 -->
     <% include partials/template/footer.ejs %>
 </div><!-- container -->
