--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,3 @@
-<<<<<<< HEAD
-<!--
-including header content which is common for all pages
--->
-<%- include layouts/header.ejs %>	
-
-<!--
-including footer content which is common for all pages
--->
-<%- include layouts/footer.ejs %>
-=======
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,8 +8,8 @@ including footer content which is common for all pages
 
 <div class="container">
     <div class="row">
-            <img class="img-responsive center-block" src="images/quizMakerLogo.png" class="img-responsive" alt="Quiz Logo">
-            <h1 class="hidden">Quiz App</h1>
+            <img class="img-responsive center-block" src="images/uabanner.png" class="img-responsive" alt="Ualbany Banner" style="width:700px;height:90px;" >
+            
             <div>
               <% include partials/template/login.ejs %>
     </div><!-- row -->
@@ -29,5 +18,3 @@ including footer content which is common for all pages
   <% include partials/template/footer.ejs %>
   <% include partials/template/jsdefaults.ejs %>
 </body>
-</html>
->>>>>>> origin/master
