--- a/views/partials/template/head.ejs
+++ b/views/partials/template/head.ejs
@@ -1,6 +1,8 @@
+    
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title><%= title %></title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<link href="/stylesheets/bootstrap.css" type="text/css" rel="stylesheet" media="screen">
-<link href="/stylesheets/style.css" type="text/css" rel="stylesheet" media="screen">
+<link href="https://fonts.googleapis.com/css?family=Pragati+Narrow" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+      <link rel="stylesheet" type="text/css" href="css/main.css"
