--- a/views/partials/template/createquiz.ejs
+++ b/views/partials/template/createquiz.ejs
@@ -1,17 +1,35 @@
-<div class="form-group">
-    <label>Quiz Name:</label>
-    <input type="text" name="quizName" class="form-control" placeholder="Topic" required>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"> 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+<div class="container">
+
+        <div class="row justify-content-center">
+                <div class="col-6">
+        <form method="post"  action="/createQuiz" id="createQuiz">
+
+    <div class="form-group">
+    <label>Quiz name:</label>
+    <input type="text" name="quizName" class="form-control" placeholder="Name" required>
 </div>
 <div class="form-group">
-    <label>Closing Date:</label>
-    <input type="date" name="dateFinished" class="form-control" placeholder="Date" value="2019-05-01" required>
+    <label>Ending Date:</label>
+    <input type="date" name="dateFinished" class="form-control" placeholder="Date" value="2018-01-01" required>
 </div>
 <div class="form-group">
-    <label>Time Limit (in minutes):</label>
-    <input type="number" name="times" class="form-control" placeholder="e.g. 15" required>
+    <label>Time limit:</label>
+    <input type="number" name="times" class="form-control" placeholder="Time" required>
 </div>
 <div class="form-group">
-    <label>Passing Score:</label>
-    <input type="number" name="score" class="form-control" placeholder="e.g. 10" required>
+    <label>Minimum score to pass:</label>
+    <input type="number" name="score" class="form-control" placeholder="Score" required>
+</div>
+
+<div class="form-group">
+        <button type="submit" class="btn btn-default btn-lg center-block">Create Quiz</button>
+    </div>
+</form>
+</div>
+</div>
 </div>
 
