--- a/views/partials/template/footer.ejs
+++ b/views/partials/template/footer.ejs
@@ -1,5 +1,21 @@
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <footer class="footer text-center">
-                <p>&copy; Chalkboard</p>
-        </footer><!-- footer -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+
+
+<div class="container">
+      <div class="row mgTp">
+<div class="col-md-6 offset-md-3 col-sm-6 col-xs-6">
+      <footer class="footer text-center">
+              <p>&copy; Chalkboard 2019 by: 418Y Group #8</p>
+      </footer><!-- footer -->
+</div>
+</div>
 </div>
