--- a/views/partials/template/login.ejs
+++ b/views/partials/template/login.ejs
@@ -1,18 +1,48 @@
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <h2 class="page-header">Account Login</h2>
-    <form method="post" action="/">
-        <div class="form-group">
-            <label>Email Address</label>
-            <input type="email" name="mail" class="form-control" placeholder="e.g. user@user.com">
-        </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" name="password" class="form-control" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-default center-block">Submit</button>
-        <div id="errorMessage"></div>
-        <!-- <a href="">Forgot your password?</a> -->
-    </form>
-</div>
+
+<html>
+
+    <head>
+    <title>Login Form</title>
+   	 
+   
+  
+   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <!------ Include the above in your HEAD tag ---------->
+   
+   
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Pragati+Narrow" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+      <link rel="stylesheet" type="text/css" href="css/main.css"
+    
+    </head>
+    
+    
+    <body>
+          
+
+   <div class="container">
+       <div class="row mgTp">
+           <form class="col-md-6 offset-md-3" action="/" method="post" name="form1" >
+               <h3 class="title">Login</h3>
+               <hr class="divisor">
+               <div class="form-group">
+                   <label  for='email'>Username</label>
+           <input class="form-control" type="email" name='mail' placeholder="Email"/>
+               </div>
+               <div class="form-group">
+             <label for='password'>Password</label>
+             <input  type='password' name='password' class="form-control" placeholder="Password"  />
+               </div>
+               <div class="form-check">
+                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                   <label class="form-check-label" for="exampleCheck1">Remember me</label>
+               </div>
+         <button type="submit" class="btn btn-primary topBtn"><i class="fa fa-sign-in"></i> Login</button>
+         <button type="submit" class="btn btn-primary topBtn"><i class="fa fa-sign-in"></i> Sign up</button>
+           </form>
+       </div>
+   </div>
 <script>
 </script>
