--- a/views/partials/template/navigationadmin.ejs
+++ b/views/partials/template/navigationadmin.ejs
@@ -1,25 +1,76 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
+<!DOCTYPE html>
+<html lang="en">
+		
+				<head>
+                    <title><%= title %></title>
+              
+            
+                    <meta name="viewport" content="width=device-width, initial-scale=1">
+            
+            
+                    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+                    
+                    <link rel="stylesheet" type="text/css" href="/app.css"
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded=false">
-                <span class="sr-only"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="pull-brand" href="/"><img src="images/quizMakerLogoBrand.png" class="img-responsive" alt="Quiz Logo"></a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar">
-                <ul class="nav navbar-nav">
-                    <li><a href="/createquiz">Create Quiz</a></li>
-                    <li><a href="/takequiz">Take Quiz</a></li>
-                    <li><a href="/results">Results</a></li>
-                    <li><a href="/profile">Profile</a></li>
-                    <li><a href="/settings">Settings</a></li>
-                    <li><a href="/admin">Admin</a></li>
-                    <li><a href="/logout">Logout</a></li>
-                </ul>
-        </div><!-- navbar-collapes -->
-    </div><!-- container-fluid -->
-</nav>
+            </head>
+
+            <body>
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                    <a class="navbar-brand" href="#">418Y Group #8</a>
+
+            <div>
+
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/profile">profile</a>
+        </li>
+        <li class="nav-item">
+                <a class="nav-link" href="/results"> Student results</a>
+              </li>
+            
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+              </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Admin controls
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/createquiz">Create Quiz</a>
+            <a class="dropdown-item" href="/takequiz">Test Quiz</a>
+            <a class="dropdown-item" href="/settings">Settings</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/admin">Admin page</a>
+          </div>
+        </li>
+        
+      </ul>
+    </div>
+  <!-- jquery file-->
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+
+   <!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+  </nav>
+
+
+
+
+
+
+<script src="app.js"></script>
+
+
+</body>
+</html>
