--- a/views/partials/template/navigationcreator.ejs
+++ b/views/partials/template/navigationcreator.ejs
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="pull-brand" href="/"><img src="images/quizMakerLogoBrand.png" class="img-responsive" alt="Quiz Logo"></a>
+            <a class="pull-brand" href="/"><img src="images/quizMakerLogoBrand.png" class="img-responsive" alt="Chalkboard"></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
