--- a/views/takequizbyid.ejs
+++ b/views/takequizbyid.ejs
@@ -9,7 +9,7 @@
 <% include partials/template/header.ejs %>
 
 <div class="container">
-    <% include partials/template/navigationadmin.ejs %>
+    <% include partials/template/back.ejs %>
     <div class="row">
         <% include partials/template/takequizbyid.ejs %>
     </div><!-- row -->
