--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -11,11 +11,12 @@
 <div class="container">
     <% include partials/template/navigationuser.ejs %>
     <div class="row">
-        <h1>Take Quiz</h1>
-        <% include partials/template/fetchquizes.ejs %>
-    </div><!-- span12 -->
+        <h1>Profile</h1>
+        <% include partials/template/changepassword.ejs %>
+    </div><!-- row -->
     <% include partials/template/footer.ejs %>
 </div><!-- container -->
+
 
 
 <% include partials/template/jsdefaults.ejs %>
