--- a/views/admintakequizbyid.ejs
+++ b/views/admintakequizbyid.ejs
@@ -9,15 +9,16 @@
 <% include partials/template/header.ejs %>
 
 <div class="container">
-    <% include partials/template/navigationuser.ejs %>
+    <% include partials/template/navigationadmin.ejs %>
     <div class="row">
-        <h1>Take Quiz</h1>
-        <% include partials/template/fetchquizes.ejs %>
-    </div><!-- span12 -->
+        <% include partials/template/admintakequizbyid.ejs %>
+    </div><!-- row -->
     <% include partials/template/footer.ejs %>
 </div><!-- container -->
 
 
 <% include partials/template/jsdefaults.ejs %>
+<script src="/javascripts/takequiz.js"></script>
+<script src="../javascripts/countdownclock.js"></script>
 </body>
 </html>
