--- a/views/partials/template/navigationadmin.ejs
+++ b/views/partials/template/navigationadmin.ejs
@@ -8,12 +8,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="pull-brand" href="/"><img src="images/quizMakerLogoBrand.png" class="img-responsive" alt="Quiz Logo"></a>
+            <a class="pull-brand" href="/"><img src="images/quizMakerLogoBrand.png" class="img-responsive" alt="Chalkboard"></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav">
                     <li><a href="/createquiz">Create Quiz</a></li>
-                    <li><a href="/takequiz">Take Quiz</a></li>
+                    <li><a href="/admintakequiz">Take Quiz</a></li>
                     <li><a href="/results">Results</a></li>
                     <li><a href="/profile">Profile</a></li>
                     <li><a href="/settings">Settings</a></li>
