--- a/views/admintakequizbyid.ejs
+++ b/views/admintakequizbyid.ejs
@@ -19,6 +19,6 @@
 
 <% include partials/template/jsdefaults.ejs %>
 <script src="/javascripts/takequiz.js"></script>
-<script src="../javascripts/countdownclock.js"></script>
+<script src="../javascripts/countdown.js"></script>
 </body>
 </html>
