--- a/views/createquizquestions.ejs
+++ b/views/createquizquestions.ejs
@@ -12,7 +12,7 @@
     <% include partials/template/navigationadmin.ejs %>
     <div class="row">
         <h1 class="text-center">Create Quiz!</h1>
-        <p class="text-center">Let's create some quizes!</p>
+        <p class="text-center">Let's create some quizzes!</p>
         <form method="post">
             <div class="form-group">
                 <% include partials/template/createquestion.ejs %>
