--- a/views/creator.ejs
+++ b/views/creator.ejs
@@ -12,7 +12,7 @@
     <% include partials/template/navigationcreator.ejs %>
     <div class="row">
         <h1>Welcome creator!</h1>
-        <p>Let's create some ultra cool quizes!</p>
+        <p>Let's create some ultra cool quizzes!</p>
         <p>You are on page <%= title %></p>
     </div><!-- span12 -->
     <% include partials/template/footer.ejs %>
