--- a/views/partials/template/viewquizzes.ejs
+++ b/views/partials/template/viewquizzes.ejs
@@ -1,6 +1,6 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <h3 class="page-header"><a href="#col3viewquizes" data-toggle="collapse">Quizzes</a></h3>
-        <div id="col3viewquizes" class="collapse">
+    <h3 class="page-header"><a href="#col3viewquizzes" data-toggle="collapse">Quizzes</a></h3>
+        <div id="col3viewquizzes" class="collapse">
             <div class="responsive">
                 <table class="table table-hover table-striped">
                     <thead>
