--- a/views/partials/content/creators.ejs
+++ b/views/partials/content/creators.ejs
@@ -1,5 +1,5 @@
 <div>
-    <h2>We who created this fine page are:</h2>
+    <h2>Creators:</h2>
     <ul>
         <li>Jordon Behr</li>
         <li>Drew Bhavsar</li>
