--- a/views/partials/template/viewquizzes.ejs
+++ b/views/partials/template/viewquizzes.ejs
@@ -19,7 +19,14 @@
                                 <td><%= data.dateFinished %></td>
                                 <td><%= data.times %></td>
                                 <td><%= data.score %></td>
-                                <td><a><a href=""><span class="glyphicon glyphicon-trash"></span></a></td>
+                                <td>
+                                    <div style="float:left">
+                                        <form method="post" action="/settings" id="deleteQuiz" style="float:right">
+                                            <input type="submit" name="delete" value='Delete' onClick="return confirm('Are you sure you want to delete?')" />
+                                            <input type="hidden" name="_method" value="DELETE" />
+                                        </form>
+                                    </div>
+                                </td>
                             </tr>
                         <% }) %>
                     </tbody>
